<resources>
    <string name="app_name">Efficio</string>
    <string name="no_item">No item, please use quick add below to create one.</string>
    <string name="store">Store</string>
    <string name="choose_or_create_dep">Choose or Create Department</string>
    <string name="no_dep">No existing department,\nplease create one above</string>
    <string name="no_dep_edit">No existing department</string>
    <string name="completed">Completed</string>
    <string name="current_department">Current department: %s</string>
    <string name="item_s_name">Item\'s name</string>
    <string name="change_item_name_and_dep">Edit Item</string>
    <string name="filter_or_create_new_department">Filter/Create department</string>
    <string name="delete_task">Delete item</string>
    <string name="confirm_delete_task">Do you want to delete this item?</string>
    <string name="edit_departments">Edit departments</string>
    <string name="create_new_store">Create new store</string>
    <string name="delete_current_store">Delete current store</string>
    <string name="rename_current_store">Rename current store</string>
    <string name="departments">Departments</string>
    <string name="manage_departments">Manage departments</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="edit_dep_name">Change department\'s name</string>
    <string name="error_on_update_dep_name">Error while updating department\'s name</string>
    <string name="error_title">Oopsy…</string>
    <string name="error_empty_dep_name">Need a name to update</string>
    <string name="you_can_reorder_and_rename_the_departments">Drag to reorder,\nTap to rename the departments</string>
    <string name="appwidget_text">Efficio widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget">No item</string>
    <string name="choose_store">Choose store</string>
    <string name="error">Error</string>
    <string name="error_rename">Problem while renaming store, maybe the name is already taken.</string>
    <string name="nb_items_format">%1$s (%2$d)</string>
    <string name="choose_new_store_name">Choose a new name for the store</string>
    <string name="error_create_store">Problem while creating store</string>
    <string name="confirm_delete_store">Do you really want to delete the store named: %s</string>
    <string name="title_activity_widget_settings">Widget Settings</string>
    <string name="opacity">Opacity</string>
    <string name="add_department_button">Add department button</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_dep">Deleting the department will delete all items related to it.\nAre you sure?</string>
    <string name="confirm_delete_dep_title">Delete department: %s</string>
    <string name="settings">Settings</string>
    <string name="invert_checkbox_pref">Put checkbox on right side</string>
    <string name="invert_checkbox_sum">Tick to put the checkbox on the right side</string>
    <string name="invert_list_pref">Invert the list</string>
    <string name="invert_list_sum">Tick to invert the whole list</string>
    <string name="dep_name">(%s)</string>
    <string name="periodicity">Periodicity: </string>
    <string name="cancel_custom_period">cancel custom period</string>
    <string-array name="periodicity_choices">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Custom</item>
    </string-array>

    <string-array name="periodicity_units">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string name="need_valid_period">Periodicity value must be a number</string>
    <string name="backup_database">Backup Database</string>
    <string name="restore_database">Restore Database</string>
    <string name="backup_database_done">Database backup done to file %s</string>
    <string name="backup_database_fail">Database backup failed</string>
    <string name="quick_add_item">Add an item</string>
    <string name="permission_required_title">Permission required</string>
    <string name="permission_write_required">In order to backup the database to the SD card, we need permission to write on it.</string>
    <string name="choose_file_title">Choose a file</string>
    <string name="no_backup">No backup available</string>
    <string name="restore_database_done">Database restoration done</string>
    <string name="restore_database_fail">Database restoration failed</string>
    <string name="tip_you_can_slide_an_item_right_or_left_to_change_quantity">Tip: You can slide an item right or left to change quantity</string>
    <string name="quantity">Quantity</string>
</resources>
