<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/department_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <ImageButton
        android:id="@+id/add_dep_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/add_department_button"
        android:src="@drawable/plus_math"/>

    <EditText
        android:id="@+id/add_dep_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/add_dep_btn"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/add_dep_btn"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@id/add_dep_btn"
        android:hint="@string/filter_or_create_new_department"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:textColorHint="@color/hint"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dep_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_dep_btn"/>

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_dep_text"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/no_dep"
        android:textSize="22sp"/>
</RelativeLayout>