<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/item_s_name"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/item_name_edt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:inputType="textAutoCorrect"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/delete_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@android:drawable/ic_menu_delete"
            android:text="@string/delete_task" />
    </LinearLayout>


    <TextView
        android:id="@+id/dep_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:text="@string/current_department"
        android:textSize="16sp" />

    <include layout="@layout/department_chooser_dialog" />


</LinearLayout>