<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/item_s_name"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="18dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/item_name_edt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textAutoCorrect"
            android:maxLines="1"/>

        <ImageButton
            android:id="@+id/delete_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:src="@drawable/delete"
            android:text="@string/delete_task"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodicity"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/period_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            />

        <LinearLayout
            android:id="@+id/custom_periodicity_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/period_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"/>

            <Spinner
                android:id="@+id/period_unit_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/cancel_custom_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cancel_custom_period"
                android:src="@drawable/cancel"
                android:tint="@android:color/black"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/dep_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_department"
        android:textSize="18sp"/>

    <include layout="@layout/department_chooser_dialog"/>


</LinearLayout>